@@ -1,12 +1,0 @@
-[Desktop Entry]
-Type=Application
-Version=0.1
-Name=Bazaar Notification
-GenericName=Bazaar Notification
-Comment=Notification Area Icon for Bazaar
-Icon=bzr-icon-64
-Exec=bzr-notify
-Categories=Application;Development;RevisionControl;
-Terminal=false
-X-GNOME-Autostart-Delay=30
-
