@@ -1,10 +1,0 @@
-[Desktop Entry]
-Type=Application
-Version=0.1
-_Name=Bazaar Notification
-_GenericName=Bazaar Notification
-_Comment=Notification Area Icon for Bazaar
-Icon=bzr-icon-64
-Exec=bzr-notify
-Categories=Application;Development;RevisionControl;
-Terminal=false
